--- a/source/stylesheets/layout/_navigation.scss
+++ b/source/stylesheets/layout/_navigation.scss
@@ -25,7 +25,6 @@
     box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
     position: absolute;
     left: 0;
-    z-index: 9999;
     transform: translateX(-100%);
     transition: .3s;
     
