--- a/source/stylesheets/layout/_slick-carousel.scss
+++ b/source/stylesheets/layout/_slick-carousel.scss
@@ -9,7 +9,7 @@
   &-arrow {
     width: 50px;
     height: 50px;
-    z-index: 2000;
+    z-index: 10;
   }
   &-next {
     right: 0;
